Added mongodb lab config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring:
+    data:
+        mongodb:
+            host: ds339648.mlab.com 
+            port: 39648
+            database: heroku_f06znd42
