--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring:
-    data:
-        mongodb:
-            host: ds339648.mlab.com 
-            port: 39648
-            database: heroku_f06znd42
+spring.data.mongodb.uri=mongodb://heroku_f06znd42:sm1l0ueilkmm8kqeapveke64dt@ds339648.mlab.com:39648/heroku_f06znd42
